public/styles/styles.css
:root {
    --small: 'Open Sans', sans-serif;
    --large: 'Abril Fatface', cursive;
}
body {
    font-family: var(--small);

}

.navbar-light .navbar-nav .nav-link {
    color: black;
}
.brand {
    font-size: 4.2rem;
    font-family: var(--large);
    line-height: .2;
}

.fa {
    color:
        black;
}

a.navbar-brand {
    text-align: left !important;
}

a span.brand-by {
    font-size: 0.3em;
}

a span.brand-founder {
    display: block;
    font-size: .3em;
}

a {
    text-decoration: none;
    color: unset;
}

#navbarSupportedContent {
    max-width: max-content;
    margin-right: 1em;
}

@media only screen and (max-width: 575px) {
    .navbar-brand {
        margin-left: 4vw !important;
    }
    .brand {
        font-size: 10vw;
        font-family: var(--large);
        line-height: .2;
    }
  }

  @media only screen and (max-width: 600px) {

    footer.mancave-footer {
        font-size: 2vw;
        padding: 2vw !important;
    }

    footer .btn {
        font-size: 2vw;
    }

  }

